name:                transact-sql
version:             0.1.0.0
synopsis:            Parse, analyze, transform and pretty-print SQL code
description:         Please see README.md
homepage:            http://github.com/asztal/transact-sql
license:             BSD3
license-file:        LICENSE
author:              Lee Houghton
maintainer:          lee@asztal.net
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.TransactSql.Types
                     , Language.TransactSql.AST
                     , Language.TransactSql.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3
  default-language:    Haskell2010

executable sql-lang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transact-sql
  default-language:    Haskell2010

test-suite sql-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , transact-sql
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asztal/transact-sql

